# pyleapfrog

./: LICENSE  README.ipynb  README.md  README.sh  setup.cfg  setup.py
examples/: breast_cancer.ipynb  logistic.ipynb  twolayer.ipynb
leapfrog/: __init__.py  leapfrog.py  leapfrog_core.pyx  leapfrog_estimator.py  leapfrog_models.py  leapfrog_stopper.py  leapfrog_trainer.py  leapfrog_tuner.py  leapfrog_util.pyx  models.py
tests/: test_logistic.py  test_twolayer.py
