[metadata]
name = leapfrog
version = 0.0.1
author = Philipp Benner
author_email = philipp.benner@bam.de
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pbenner/pyleapfrog
project_urls =
    Bug Tracker = https://github.com/pbenner/pyleapfrog/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = leapfrog
python_requires = >=3.6

[options.packages.find]
where = src
